# hyphy-mcp

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  start-dev.sh  start.sh
genkit-client/: .env.example  README.md  package-lock.json  package.json  test-job-tools.js  test-result-fetching.js  tsconfig.json
genkit-client-ui/: README.md  package-lock.json  package.json
genkit-client-ui/src/routes/: +layout.svelte  +page.svelte
genkit-client/data/: global-jobs.json
genkit-client/data/sessions/: session-1754517115564-kr9vcq7.json  session-1754517897051-atiqv6i.json  session-1754536542098-den1mcs.json  session-1754537420260-0nhj5rg.json  session-1754537746818-vi2deqk.json
genkit-client/sessions/: session-1754443378978-937oavq.json  session-1754443398879-vm5wo68.json  session-1754443703979-f5efdi9.json  session-1754443780115-xj04nge.json  session-1754443834324-0ltf4ta.json  session-1754444096364-97dhz4d.json  session-1754444110648-k9ak6qk.json  session-1754444409904-096nb84.json  session-1754446951691-ogse9c4.json  session-1754447298029-61kh6zr.json
genkit-client/src/: agents.ts  ai.ts  chatFlow.ts  datasetStore.ts  fileManager.ts  globalJobStore.ts  housekeepingTools.ts  hyphyTools.ts  index.ts  schema.ts  server.ts  sessionStore.ts  types.ts  utils.ts  vegaTools.ts  visualizationStore.ts
genkit-client/src/services/: registryService.ts
hyphy-mcp/: __init__.py  server.py
python-mcp-server/: Procfile  README.md  pyproject.toml  requirements.txt
python-mcp-server/src/: __init__.py  __main__.py  server.py
shared/mcp_schemas/: hyphy_schemas.py
shared/ts_interfaces/: hyphy_types.ts
(+11 files in other folders)
