[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyphy-mcp"
dynamic = ["version"]
description = "Model Context Protocol server for HyPhy evolutionary analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Danielle Callan", email = "dcallan@temple.edu"}
]
dependencies = [
    "biopython>=1.83",
    "mcp[cli]>=1.9.4",
]

[project.urls]
Homepage = "https://github.com/d-callan/hyphy-mcp"
Issues = "https://github.com/d-callan/hyphy-mcp/issues"

[project.scripts]
hyphy-mcp = "hyphy_mcp.__main__:run"

[tool.setuptools]
package-dir = {"hyphy_mcp" = "hyphy-mcp"}

[tool.setuptools.dynamic]
version = {attr = "hyphy_mcp.version.__version__"}
